(core) Fix CSS errors related to dark mode
Summary: Fixes a few cosmetic CSS bugs since dark mode landed.

Test Plan: Tested manually.

Reviewers: jarek

Reviewed By: jarek

Subscribers: jarek

Differential Revision: https://phab.getgrist.com/D3649

--- a/app/client/components/GridView.css
+++ b/app/client/components/GridView.css
@@ -1,5 +1,5 @@
 .gridview_data_pane {
-  background-color: var(--grist-theme-table-body-bg, unset);
+  background-color: var(--grist-theme-table-body-bg, white);
   position: relative;
   width: 100%;
   overflow: hidden;
